manager password changed on host and removed from properties file

--- a/build.standalone.properties
+++ b/build.standalone.properties
@@ -1,7 +1,7 @@
 ##
 # STANDALONE build for org.glite.slcs.server
 #
-# $Id: build.standalone.properties,v 1.1 2006/11/17 14:31:20 vtschopp Exp $
+# $Id: build.standalone.properties,v 1.2 2006/11/19 18:03:46 vtschopp Exp $
 ##
 slcs.java.version=1.4.2
 slcs.java.short.version=jdk14
@@ -24,4 +24,4 @@ tomcat.home=/usr/local/tomcat-5.5
 # deployment
 tomcat.manager.url=https://hestia.switch.ch/manager
 tomcat.manager.username=admin
-tomcat.manager.password=112lapins
+tomcat.manager.password=CHANGEME
