--- a/websrc/WEB-INF/web.xml
+++ b/websrc/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 
-<!-- $Id: web.xml,v 1.1 2006/10/27 12:16:13 vtschopp Exp $ -->
+<!-- $Id: web.xml,v 1.2 2007/03/28 08:52:17 vtschopp Exp $ -->
          
 
 <web-app id="SLCS"
@@ -12,59 +12,79 @@
     <context-param>
         <!-- MANDATORY SLCSServerConfigurationFile: absolute filename or file in classpath -->
         <param-name>SLCSServerConfigurationFile</param-name>
-        <param-value>/opt/glite/etc/slcs/slcs.xml</param-value>
+        <!-- <param-value>/opt/glite/etc/slcs/slcs.xml</param-value> -->
+        <param-value>/etc/slcs/slcs.xml</param-value>
     </context-param>
 
     <!-- Shibboleth Authorization Filter -->
     <filter>
         <filter-name>LoginAuthorizationFilter</filter-name>
-        <filter-class>org.glite.slcs.filter.ShibbolethAuthorizationFilter</filter-class>
+        <filter-class>org.glite.slcs.filter.AttributesAuthorizationFilter</filter-class>
         <!-- MANDATORY ACLImplementation: class name of implementation -->
         <init-param>
             <param-name>ACLImplementation</param-name>
-            <param-value>org.glite.slcs.acl.impl.ShibbolethXMLAccessControlList</param-value>
+            <param-value>org.glite.slcs.acl.impl.XMLFileAccessControlList</param-value>
         </init-param>
-        <!-- OPTIONAL ACLFile: REQUIRED(filename) for org.glite.slcs.acl.impl.ShibbolethXMLAccessControlList implementation -->
+        <!-- MANDATORY ACLFile: REQUIRED(filename) for org.glite.slcs.acl.impl.XMLFileAccessControlList implementation -->
         <init-param>
             <param-name>ACLFile</param-name>
-            <param-value>/opt/glite/etc/slcs/acl.xml</param-value>
+            <!--  <param-value>/opt/glite/etc/slcs/acl.xml</param-value> -->
+            <param-value>/etc/slcs/acl.xml</param-value>
         </init-param>
         <!-- OPTIONAL ACLFileMonitoringInterval: OPTION(seconds) if present, the ACLFile will be monitored and reload on a file change -->
         <init-param>
             <param-name>ACLFileMonitoringInterval</param-name>
+            <!-- 1 min = 60 sec -->
             <param-value>60</param-value>
         </init-param>
-
+        <!-- MANDATORY: AttributeDefintions XML filename -->
+        <init-param>
+        	<param-name>AttributeDefinitions</param-name>
+        	<param-value>/etc/slcs/attributes-def.xml</param-value>
+        </init-param>
     </filter>
 
     <filter>
         <filter-name>AdminAuthorizationFilter</filter-name>
-        <filter-class>org.glite.slcs.filter.ShibbolethAuthorizationFilter</filter-class>
+        <filter-class>org.glite.slcs.filter.AttributesAuthorizationFilter</filter-class>
         <!-- MANDATORY ACLImplementation: class name of implementation -->
         <init-param>
             <param-name>ACLImplementation</param-name>
-            <param-value>org.glite.slcs.acl.impl.ShibbolethXMLAccessControlList</param-value>
+            <param-value>org.glite.slcs.acl.impl.XMLFileAccessControlList</param-value>
         </init-param>
-        <!-- OPTIONAL ACLFile: REQUIRED for org.glite.slcs.acl.impl.ShibbolethXMLAccessControlList implementation -->
+        <!-- MANDATORY ACLFile: REQUIRED for org.glite.slcs.acl.impl.XMLFileAccessControlList implementation -->
         <init-param>
             <param-name>ACLFile</param-name>
-            <param-value>/opt/glite/etc/slcs/acl-admin.xml</param-value>
+            <!-- <param-value>/opt/glite/etc/slcs/acl-admin.xml</param-value> -->
+            <param-value>/etc/slcs/admin-acl.xml</param-value>
         </init-param>
         <!-- OPTIONAL ACLFileMonitoringInterval: OPTION(seconds) if present, the ACLFile will be monitored and reload on a file change -->
         <init-param>
             <param-name>ACLFileMonitoringInterval</param-name>
-            <param-value>60</param-value>
+            <param-value>300</param-value>
+        </init-param>
+        <!-- MANDATORY: AttributeDefintions XML filename -->
+        <init-param>
+        	<param-name>AttributeDefinitions</param-name>
+        	<param-value>/etc/slcs/attributes-def.xml</param-value>
         </init-param>
     </filter>
     
     <!-- Filters mapping -->
+	<!-- user ACL on LoginServlet -->
     <filter-mapping>
         <filter-name>LoginAuthorizationFilter</filter-name>
-        <servlet-name>SLCSLoginServlet</servlet-name>
+		<servlet-name>SLCSLoginServlet</servlet-name>
     </filter-mapping>
+	<!-- user ACL on struts /login.do action
+    <filter-mapping>
+        <filter-name>LoginAuthorizationFilter</filter-name>
+		<url-pattern>/login.do</url-pattern>
+    </filter-mapping> -->
+    <!-- admin ACL on struts /admin/*.do action -->
     <filter-mapping>
         <filter-name>AdminAuthorizationFilter</filter-name>
-        <servlet-name>SLCSAdminServlet</servlet-name>
+		<url-pattern>/admin/*</url-pattern>
     </filter-mapping>
 
 
@@ -73,25 +93,43 @@
         <display-name>SLCS Login</display-name>
         <servlet-name>SLCSLoginServlet</servlet-name>
         <servlet-class>org.glite.slcs.servlet.LoginServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet>
         <display-name>SLCS Certificate Request</display-name>
         <servlet-name>SLCSCertificateServlet</servlet-name>
         <servlet-class>org.glite.slcs.servlet.CertificateServlet</servlet-class>
-    </servlet>
-    <servlet>
-        <display-name>SLCS Admininistration</display-name>
-        <servlet-name>SLCSAdminServlet</servlet-name>
-        <servlet-class>org.glite.slcs.servlet.AdminServlet</servlet-class>
-    </servlet>    
-    <!-- XXX: test servlet -->
-    <servlet>
-        <display-name>SLCS Test Servlet</display-name>
-        <servlet-name>SLCSTestServlet</servlet-name>
-        <servlet-class>org.glite.slcs.servlet.TestServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
     </servlet>
 
-    <!-- Servet Mapping -->
+	<!-- SLCS admin (struts) -->
+    <servlet>
+        <display-name>SLCS Admin Interface</display-name>
+        <servlet-name>SLCSStrutsAction</servlet-name>
+        <servlet-class>org.apache.struts.action.ActionServlet</servlet-class>
+        <init-param>
+            <param-name>config</param-name>
+            <param-value>/WEB-INF/struts-config.xml</param-value>
+        </init-param>
+		<init-param>
+			<param-name>chainConfig</param-name>
+			<param-value>/WEB-INF/chain-config.xml</param-value>
+		</init-param>
+<!-- 
+     	<init-param>
+      		<param-name>debug</param-name>
+      		<param-value>2</param-value>
+    	</init-param>
+    	<init-param>
+      		<param-name>detail</param-name>
+      		<param-value>2</param-value>
+    	</init-param>
+ -->
+         <load-on-startup>1</load-on-startup>
+    </servlet>
+
+
+    <!-- Servlet Mapping -->
     <servlet-mapping>
         <servlet-name>SLCSLoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -100,16 +138,11 @@
         <servlet-name>SLCSCertificateServlet</servlet-name>
         <url-pattern>/certificate</url-pattern>
     </servlet-mapping>
-<!-- 
+
+    <!-- Standard Action Servlet Mapping -->
     <servlet-mapping>
-        <servlet-name>SLCSAdminServlet</servlet-name>
-        <url-pattern>/admin</url-pattern>
-    </servlet-mapping>
- -->
-    <!-- XXX: test servlet -->
-    <servlet-mapping>
-        <servlet-name>SLCSTestServlet</servlet-name>
-        <url-pattern>/test</url-pattern>
+        <servlet-name>SLCSStrutsAction</servlet-name>
+        <url-pattern>*.do</url-pattern>
     </servlet-mapping>
 
 </web-app>
