--- a/build.standalone.properties
+++ b/build.standalone.properties
@@ -1,15 +1,16 @@
 ##
 # STANDALONE build for org.glite.slcs.server
 #
-# $Id: build.standalone.properties,v 1.2 2006/11/19 18:03:46 vtschopp Exp $
+# $Id: build.standalone.properties,v 1.3 2007/07/06 13:35:14 vtschopp Exp $
 ##
-slcs.java.version=1.4.2
-slcs.java.short.version=jdk14
+#slcs.required.java.version=1.4
+slcs.required.java.version=1.5
 
 ##
 # SLCS webapp
 ##
-app.name=SLCS-test
+app.name=SLCS
+#app.name=SLCS-test
 
 ##
 # org.glite.slcs.common
@@ -21,7 +22,3 @@ slcs.common.dist.dir=${slcs.common.dir}/dist
 # tomcat
 ##
 tomcat.home=/usr/local/tomcat-5.5
-# deployment
-tomcat.manager.url=https://hestia.switch.ch/manager
-tomcat.manager.username=admin
-tomcat.manager.password=CHANGEME
