--- a/build.standalone.properties
+++ b/build.standalone.properties
@@ -1,16 +1,15 @@
 ##
 # STANDALONE build for org.glite.slcs.server
 #
-# $Id: build.standalone.properties,v 1.3 2007/07/06 13:35:14 vtschopp Exp $
+# $Id: build.standalone.properties,v 1.4 2007/07/06 13:45:47 vtschopp Exp $
 ##
-#slcs.required.java.version=1.4
-slcs.required.java.version=1.5
+slcs.java.version=1.5
+slcs.java.short.version=jdk15
 
 ##
 # SLCS webapp
 ##
 app.name=SLCS
-#app.name=SLCS-test
 
 ##
 # org.glite.slcs.common
