Admin guide added.

--- a/etc/SLCSMessageResources.properties
+++ b/etc/SLCSMessageResources.properties
@@ -1,5 +1,5 @@
 ##
-# $Id: SLCSMessageResources.properties,v 1.1 2007/04/19 11:28:10 vtschopp Exp $
+# $Id: SLCSMessageResources.properties,v 1.2 2007/07/19 13:37:33 vtschopp Exp $
 ##
 
 errors.header=<p class="error">
@@ -21,6 +21,7 @@ navigation.home=Home
 navigation.rule.list=List All Rules
 navigation.rule.new=New Rule
 navigation.audit.list=Audit Events
+navigation.admin.guide=Admin Guide
 
 button.rule.edit=Edit
 button.rule.delete=Delete
