--- a/build.properties
+++ b/build.properties
@@ -1,8 +1,7 @@
 ##
 # org.glite.slcs.common build.etics.properties
-# $Id: build.properties,v 1.1 2007/07/19 13:51:16 vtschopp Exp $
+# $Id: build.properties,v 1.2 2007/07/19 13:53:53 vtschopp Exp $
 ##
 prefix=/opt/glite
-module.name=glite-slcs-ui
-module.version=1.1.1
+module.name=glite-slcs-server
 
