--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/JVM 1.4.2"/>
+	<!-- <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/JVM 1.4.2"/> -->
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.glite.slcs.common"/>
 	<classpathentry kind="lib" path="/repository/externals/tomcat/5.0.28/noarch/common/lib/servlet-api.jar"/>
 	<classpathentry kind="lib" path="/repository/externals/bouncycastle/1.34/noarch/jars/bcmail-jdk14-134.jar"/>
