target war updated.

--- a/build.properties
+++ b/build.properties
@@ -1,7 +1,8 @@
 ##
 # org.glite.slcs.common build.etics.properties
-# $Id: build.properties,v 1.2 2007/07/19 13:53:53 vtschopp Exp $
+# $Id: build.properties,v 1.3 2007/07/19 15:44:07 vtschopp Exp $
 ##
 prefix=/opt/glite
 module.name=glite-slcs-server
+webapp.name=SLCS
 
