--- a/build.xml
+++ b/build.xml
@@ -1,13 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- 
-    Copyright (c) Members of the EGEE Collaboration. 2007 
-    See http://eu-egee.org/partners/ for details on the copyright holders
-    For license conditions see the license file or http://eu-egee.org/license.html
+    Copyright (c) Members of the EGEE Collaboration. 2006.
+    See http://www.eu-egee.org/partners/ for details on the copyright
+    holders.
+
+    Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
+
+        http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
 
     ETICS build for org.glite.slcs.server
 
     Author: Valery Tschopp <tschopp@switch.ch>
-    Version: $Id: build.xml,v 1.4 2007/07/19 15:44:07 vtschopp Exp $
+    Version: $Id: build.xml,v 1.5 2007/07/20 13:48:41 vtschopp Exp $
 -->
 <project name="org.glite.slcs.server" default="jar" basedir=".">
 
@@ -32,6 +44,8 @@
     <property name="build.dir" location="${basedir}/build" />
     <property name="classes.dir" location="${build.dir}/classes" />
     <property name="test.classes.dir" location="${build.dir}/test/classes" />
+    <property name="javadoc.dir" location="${build.dir}/javadoc"/>
+
     
     <!-- install dirs -->
     <property name="install.dir" location="${basedir}/glite" />
@@ -39,9 +53,13 @@
     <!-- init -->
     <target name="init" depends="">
         <tstamp />
+        <!-- check for slcs-glite-common.jar in stage -->
+        <available property="slcs.common.jar.exists" file="${stage.lib.dir}/glite-slcs-common.jar"/>
+        <fail unless="slcs.common.jar.exists" message="${stage.lib.dir}/glite-slcs-common.jar is missing. please build org.glite.slcs.common first..."/>
+        
         <!-- classpath with libraries from ETICS repository -->
         <path id="compile.classpath">
-            <pathelement path="${classes.dir}"/>
+<!--            <pathelement path="${classes.dir}"/> -->
             <pathelement location="${stage.lib.dir}/glite-slcs-common.jar"/>
             <path refid="ext.apache-struts.classpath"/>
             <path refid="ext.bouncycastle.classpath"/>
@@ -99,13 +117,17 @@
         <echo message="war ${webapp.name}"/>
         <delete file="${build.dir}/${webapp.name}.war" failonerror="false"/>
         
+        <!-- create a temporary war-lib dir -->
         <property name="build.lib.dir" location="${build.dir}/war-lib"/>
         <mkdir dir="${build.lib.dir}"/>
+        <!-- copy glite-slcs-server lib -->
+        <copy todir="${build.lib.dir}" file="${build.dir}/${module.name}.jar"/>
+        <!-- copy glite-slcs-common lib -->
+        <copy todir="${build.lib.dir}" file="${stage.lib.dir}/glite-slcs-common.jar"/>
+        <!-- copy all third party libs -->
         <copy todir="${build.lib.dir}" flatten="true">
-            <fileset file="${build.dir}/${module.name}.jar" />
             <fileset refid="ext.apache-struts.fileset"/>
             <fileset refid="ext.bouncycastle.fileset"/>
-            <fileset refid="ext.commons-cli.fileset"/>
             <fileset refid="ext.commons-codec.fileset"/>
             <fileset refid="ext.commons-collections.fileset"/>
             <fileset refid="ext.commons-configuration.fileset"/>
@@ -116,6 +138,7 @@
             <fileset refid="ext.mysql-jdbc.fileset"/>
         </copy>
         
+        <!-- create war file -->
         <war destfile="${build.dir}/${webapp.name}.war"
              webxml="${websrc.dir}/WEB-INF/web.xml">
             <classes dir="${etc.dir}">
@@ -124,47 +147,52 @@
             <lib dir="${build.lib.dir}">
                 <include name="*.jar"/>
             </lib>
-            <webinf dir="${websrc.dir}">
-                <exclude name="WEB-INF/web.xml" />
+            
+            <!-- TODO: files from etc ?!? -->
+            
+            <webinf dir="${websrc.dir}/WEB-INF">
+                <include name="*.xml" />
+                <exclude name="web.xml" />
+            </webinf>
+            <fileset dir="${websrc.dir}">
+                <exclude name="WEB-INF/**" />
                 <include name="**/*.jsp" />
                 <include name="css/*" />
                 <include name="images/*" />
                 <include name="js/*.js" />
-                <include name="WEB-INF/*.xml" />
-            </webinf>
+            </fileset>
         </war>
         <echo message="BouncyCastle libraries MUST go in TOMCAT common/lib directory!!!" />
 
     </target>
     
+    <!-- javadoc -->
+    <target name="javadoc">
+        <echo message="javadoc..."/>
+        <javadoc packagenames="org.glite.slcs.*"
+            excludepackagenames="org.glite.slcs.struts.*"
+            sourcepath="${src.dir}"
+            destdir="${javadoc.dir}" />
+    </target>
     
     <!-- prepare installation layout in ${install.dir} -->
-    <target name="install-layout" depends="jar">
+    <target name="install-layout" depends="war">
         <echo message="prepare install in ${install.dir}"/>
         <property name="install.bin.dir" location="${install.dir}/bin"/>
+        <property name="install.webapps.dir" location="${install.dir}/share/webapps"/>
         <property name="install.etc.dir" location="${install.dir}/etc/${module.name}"/>
         <property name="install.doc.dir" location="${install.dir}/share/doc/${module.name}"/>
-        <property name="install.log.dir" location="${install.dir}/log"/>
-        <property name="install.lib.dir" location="${install.dir}/share/java"/>
+        <property name="install.javadoc.dir" location="${install.doc.dir}/api"/>
 
         <!-- first clean up -->
         <delete dir="${install.dir}"/>
 
         <!-- create install dir -->
-        <mkdir dir="${install.bin.dir}"/>
+        <!--  <mkdir dir="${install.bin.dir}"/> -->
         <mkdir dir="${install.etc.dir}"/>
+        <mkdir dir="${install.webapps.dir}"/>
         <mkdir dir="${install.doc.dir}"/>
-        <mkdir dir="${install.log.dir}"/>
-        <mkdir dir="${install.lib.dir}"/>
-        <!-- bin scripts -->
-        <copy todir="${install.bin.dir}">
-            <fileset dir="${bin.dir}">
-                <include name="slcs-*" />
-            </fileset>
-        </copy>
-        <chmod dir="${install.bin.dir}" perm="755">
-            <include name="slcs-*" />
-        </chmod>
+        <mkdir dir="${install.javadoc.dir}"/>
         <!-- etc config -->
         <copy todir="${install.etc.dir}">
             <fileset dir="${etc.dir}">
@@ -176,10 +204,12 @@
         <copy todir="${install.doc.dir}">
             <fileset dir="${doc.dir}" />
         </copy>
-        <!-- empty log file -->
-        <touch file="${install.log.dir}/slcs-init.log" />
-        <!-- application jar -->
-        <copy todir="${install.lib.dir}" file="${build.dir}/${module.name}.jar"/>
+        <!-- javadoc -->
+        <copy todir="${install.javadoc.dir}" failonerror="false">
+            <fileset dir="${javadoc.dir}" />
+        </copy>
+        <!-- application war -->
+        <copy todir="${install.webapps.dir}" file="${build.dir}/${webapp.name}.war"/>
         
    </target>
    
@@ -190,37 +220,11 @@
         <copy todir="${prefix}">
             <fileset dir="${install.dir}"/>
         </copy>
-        <!-- fix permission ?!? -->
-        <chmod dir="${prefix}/bin" perm="755">
-            <include name="slcs-*" />
-        </chmod>
     </target>
 
     <!-- package standalone lib with full dependencies -->
     <target name="package" depends="install-layout">
         <echo message="package..."/>
-        <!-- install directory -->        
-        <property name="install.lib.dir" location="${install.dir}/share/java" />
-        <!-- copy glite-slcs-common lib -->
-        <property name="slcs.common.jar" location="${stage.lib.dir}/glite-slcs-common.jar" />
-        <available property="slcs.common.jar.exists" file="${slcs.common.jar}"/>
-        <fail unless="slcs.common.jar.exists" message="${slcs.common.jar} is missing. please build org.glite.slcs.common first..."/>
-        <copy todir="${install.lib.dir}" file="${slcs.common.jar}"/>
-        <!-- copy all others third party libs in externals/share/java -->
-        <property name="install.externals.dir" location="${install.dir}/externals/share/java" />
-        <mkdir dir="${install.externals.dir}" />
-        <copy todir="${install.externals.dir}" flatten="true">
-            <fileset refid="ext.bouncycastle.fileset"/>
-            <fileset refid="ext.commons-cli.fileset"/>
-            <fileset refid="ext.commons-codec.fileset"/>
-            <fileset refid="ext.commons-collections.fileset"/>
-            <fileset refid="ext.commons-configuration.fileset"/>
-            <fileset refid="ext.commons-httpclient.fileset"/>
-            <fileset refid="ext.commons-lang.fileset"/>
-            <fileset refid="ext.commons-logging.fileset"/>
-            <fileset refid="ext.jericho-html.fileset"/>
-            <fileset refid="ext.log4j.fileset"/>
-        </copy>
     </target>
     
     <!-- create standalone tar.gz distribution  -->
@@ -251,4 +255,5 @@
         <delete dir="tgz" failonerror="false"/>
         <delete dir="rpmbuild" failonerror="false"/>
     </target>
+    
 </project>
