local dist updated.

--- a/build.properties
+++ b/build.properties
@@ -1,8 +1,9 @@
 ##
 # org.glite.slcs.common build.etics.properties
-# $Id: build.properties,v 1.3 2007/07/19 15:44:07 vtschopp Exp $
+# $Id: build.properties,v 1.4 2007/07/20 14:16:36 vtschopp Exp $
 ##
 prefix=/opt/glite
 module.name=glite-slcs-server
+module.version=1.0.0
 webapp.name=SLCS
 
