--- a/.classpath
+++ b/.classpath
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" output="build/classes" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.glite.slcs.common"/>
 	<classpathentry kind="lib" path="/repository/externals/tomcat/5.5.20/noarch/common/lib/servlet-api.jar"/>
 	<classpathentry kind="lib" path="/repository/externals/bouncycastle/1.34/noarch/jars/bcmail-jdk15-134.jar"/>
 	<classpathentry kind="lib" path="/repository/externals/apache-struts/1.3.5/noarch/struts-1.3.5/lib/struts-core-1.3.5.jar"/>
 	<classpathentry kind="lib" path="/repository/externals/commons-collections/3.2.0/noarch/commons-collections-3.2.jar"/>
-	<classpathentry kind="output" path="build/classes"/>
+	<classpathentry kind="output" path=""/>
 </classpath>
