new etics-externals with new macro

--- a/project/etics-externals.properties
+++ b/project/etics-externals.properties
@@ -1,10 +1,39 @@
 ##
-# etics-externals.properties
-# $Id: etics-externals.properties,v 1.1 2007/07/20 12:48:41 vtschopp Exp $
+# Copyright (c) Members of the EGEE Collaboration. 2007.
+# See http://www.eu-egee.org/partners/ for details on the copyright
+# holders.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#   http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+##
+#
+# etics-externals.properties defines the required properties for each
+# externals dependency:
+# 
+#   ext.<name>.version
+#   ext.<name>.name 
+#   ext.<name>.platform 
+#   ext.<name>.distfile 
+#
+# These props are used by the etics-externals.xml build file to define
+# the ext.<name>.dir, define the fileset and path and download the
+# externals into the local repository.
+# 
+# Author: Valery Tschopp <tschopp@switch.ch>
+# Version: $Id: etics-externals.properties,v 1.2 2007/07/23 09:18:24 vtschopp Exp $
 ##
 
 # URL of the ETICS repository
-externals.url=http://eticssoft.web.cern.ch/eticssoft/repository/externals
+repository.url=http://eticssoft.web.cern.ch/eticssoft/repository
 
 # Apache Struts
 ext.apache-struts.version=1.3.5
@@ -22,7 +51,7 @@ ext.axis.distfile=axis.tar.gz
 ext.bouncycastle.version=1.34
 ext.bouncycastle.name=bouncycastle
 ext.bouncycastle.platform=noarch
-ext.bouncycastle.distfile=axis.tar.gz
+ext.bouncycastle.distfile=bouncycastle-1.34-jdk1.5.tar.gz
 
 # commons-cli
 ext.commons-cli.version=1.0.0
@@ -95,4 +124,5 @@ ext.tomcat.version=5.5.20
 ext.tomcat.name=tomcat
 ext.tomcat.platform=noarch
 ext.tomcat.distfile=tomcat.tar.gz
+
     
